<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/login_image_description" />


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="80dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNumberPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="numberPassword"
        android:background="@drawable/background_field"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submitPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="18dp"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:background="@drawable/background_field"
        android:enabled="false"/>

</LinearLayout>